src/test/ui/proc-macro/attribute-order-restricted.stderr
error: macro attributes must be placed before `#[derive]`
  --> $DIR/attribute-order-restricted.rs:11:1
   |
LL | #[attr_proc_macro]
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

